# deprecated-bot

./: Cargo.toml  Dockerfile  README.md
.github/workflows/: ci.yml  validate-renovate.yml
src/: main.rs  model.rs
