[package]
name = "deprecated-bot"
version = "0.1.3"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
envy = "0.4.2"
once_cell = "1.16.0"
serde = { version = "1.0.148", features = ["derive"] }
serenity = { version = "0.11.5", default-features = false, features = ["http", "gateway", "builder", "client", "model", "cache", "rustls_backend"] }
tokio = { version = "1.22.0", features = ["macros", "rt-multi-thread"] }

[profile.release]
strip = true
opt-level = "z"
lto = true
codegen-units = 1
